<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- API Keys -->
    <string name="google_android_map_api_key">AIzaSyCWdMXQDI2r0_6FQkxC73LfXkeOrwpONYw</string>

    <string name="app_name">Quake Report</string>
    <string name="near_the">Near the</string>
    <string name="no_earthquake">No earthquakes found.</string>
    <string name="no_connection">No internet connection.</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>

    <string name="both">Both</string>
    <string name="earthquake">Earthquake</string>
    <string name="tsunami">Tsunami</string>

    <string name="location">Location</string>
    <string name="date">Date/Time</string>

    <string name="magnitude">Magnitude</string>
    <string name="sort_by">Sort By:</string>
    <string name="number_entries">Number of items:</string>
    <string name="from">Date From (YYYY-MM-DD)</string>
    <string name="to">Date To (YYYY-MM-DD)</string>
    <string name="date_format">YYYY-MM-DD</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Location Settings</string>

    <string name="settings_device_loc_label">Use device location</string>
    <string name="settings_device_loc_key" translatable="false">device_location</string>

    <string name="settings_location_label">Location</string>
    <string name="settings_location_key" translatable="false">location</string>
    <string name="settings_location_default" translatable="false">London, UK</string>

    <string name="settings_distance_label">Distance (km)</string>
    <string name="settings_distance_key" translatable="false">maxradiuskm</string>
    <string name="settings_distance_default" translatable="false">1500</string>
</resources>
