<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <SwitchPreference
        android:disableDependentsState="true"
        android:defaultValue="false"
        android:key="@string/settings_device_loc_key"
        android:title="@string/settings_device_loc_label"/>

    <com.example.android.quakereport.EditTextPreference
        android:defaultValue="@string/settings_location_default"
        android:inputType="text"
        android:key="@string/settings_location_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_location_label"
        android:dependency="@string/settings_device_loc_key"/>

    <com.example.android.quakereport.EditTextPreference
        android:defaultValue="@string/settings_distance_default"
        android:inputType="text"
        android:key="@string/settings_distance_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_distance_label"/>
</PreferenceScreen>